@@ -48,6 +48,7 @@ Minor aesthetic improvements
 
   * coord_polar now specifies aspect.ratio by default, and I've made a few other tweaks to make polar coordinates plot look nicer
   * geom_bar no longer draws gray borders by default, but instead uses the same colour as fill (this eliminates a tiny gap between neighbouring bars)
+  * geom_polygon now has a decent example
   * plotmatrix: tweaks to improve display of scatterplot matrix
   * scale_brewer: added option to reverse palette
   * scale_colour: colour and fill legends now look exactly the same (previously colour was missing a grey border)
